URI/C/compiling_error.txt
C:\Users\Gustavo\github\faculdade\URI\C\1562.c:3:40: error: 'x' undeclared here (not in a function)
 void pode_ser_par ( int alunos_sem_par[x], int &alunos_com_par[x], int x ) {
                                        ^
C:\Users\Gustavo\github\faculdade\URI\C\1562.c:3:48: error: expected ';', ',' or ')' before '&' token
 void pode_ser_par ( int alunos_sem_par[x], int &alunos_com_par[x], int x ) {
                                                ^
C:\Users\Gustavo\github\faculdade\URI\C\1562.c: In function 'pares':
C:\Users\Gustavo\github\faculdade\URI\C\1562.c:26:5: warning: implicit declaration of function 'pode_ser_par' [-Wimplicit-function-declaration]
     pode_ser_par(alunos_sem_par,&alunos_com_par,x)
     ^~~~~~~~~~~~
C:\Users\Gustavo\github\faculdade\URI\C\1562.c:27:5: error: expected ';' before 'for'
     for ( aux = 1 ; aux <= x ; aux++) {
     ^~~
